--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "events": "^3.3.0",
     "three": "^0.151.3",
     "vite": "^4.2.0"
   }
