--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "events": "^3.3.0",
+    "gsap": "^3.11.5",
     "three": "^0.151.3",
     "vite": "^4.2.0"
   }
