--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "parcel-plugin-imagemin": "^4.0.2",
     "rimraf": "^4.1.2",
     "sass": "^1.62.1",
+    "sass-loader": "13.3.0",
     "three": "^0.151.3",
     "vite": "^4.3.8"
   },
